--- a/wallbuildercalculator.html
+++ b/wallbuildercalculator.html
@@ -12,51 +12,59 @@
 			<h1>Wall Builder Calculator</h1>
 		</header>
 		<main>
+			<section id="costBuilderSection">
+				<h2>Cost Building Section</h2>
+				<div>
+					<label for="sizeTxt">Enter size of area of wall to sound proof in square feet:</label>
+					<input type="text" id="sizeTxt" name="sizeTxt">
+				</div>
+			</section>
 			<section id="materialsSection">
 				<h2>Materials</h2>
+				<p>All materials are in dollars</p>
+				<div>
+					<div class="form-control">
+						<label for="rcTxt">Resilient Channel</label>
+						<input type="text" id="rcTxt" name="rcTxt">
+					</div>
+					<div class="form-control">
+						<label for="ggCompTxt">Green Glue"</label>
+						<input type="text" id="ggCompTxt" name="ggCompTxt">
+					</div>
+				 	<div class="form-control">
+						<label for="drywall12Txt">1/2" Drywall</label>
+						<input type="text" id="drywall12Txt" name="drywall12Txt">
+					</div>
+			 		<div class="form-control">
+						<label for="drywall58Txt">5/8" Drywall</label>
+						<input type="text" id="drywall58Txt" name="drywall58Txt">
+					</div>
+				 	<div class="form-control">
+						<label for="silentFXTxt">SilentFX Drywall</label>
+						<input type="text" id="silentFXTxt" name="silentFXTxt">
+					</div>
+				 	<div class="form-control">
+						<label for="drywallCompoundTxt">Drywall Compound</label>
+						<input type="text" id="drywallCompoundTxt" name="drywallCompoundTxt">
+					</div>
+				 	<div class="form-control">
+						<label for="studsTxt">Studs</label>
+						<input type="text" id="studsTxt" name="studsTxt">
+					</div>
+			 		<div class="form-control">
+						<label for="safeNSoundTxt">Safe'n'Sound Insulation</label>
+						<input type="text" id="safeNSoundTxt" name="safeNSoundTxt">
+					</div>
+					<div class="form-control">
+						<label for="battInsulationTxt">Fibreglass Insulation</label>
+						<input type="text" id="battInsulationTxt" name="battInsulationTxt">
+					</div>
+					<div class="form-control">
+						<label for="SonopanTxt">Sonopan</label>
+						<input type="text" id="SonopanTxt" name="SonopanTxt">
+					</div>
+				</div>
 			</section>
-			<div>
-				<div class="form-control">
-					<label for="rcTxt">Resilient Channel</label>
-					<input type="text" id="rcTxt" name="rcTxt">
-				</div>
-				<div class="form-control">
-					<label for="ggCompTxt">Green Glue"</label>
-					<input type="text" id="ggCompTxt" name="ggCompTxt">
-				</div>
-			 	<div class="form-control">
-					<label for="drywall12Txt">1/2" Drywall</label>
-					<input type="text" id="drywall12Txt" name="drywall12Txt">
-				</div>
-			 	<div class="form-control">
-					<label for="drywall58Txt">5/8" Drywall</label>
-					<input type="text" id="drywall58Txt" name="drywall58Txt">
-				</div>
-			 	<div class="form-control">
-					<label for="silentFXTxt">SilentFX Drywall</label>
-					<input type="text" id="silentFXTxt" name="silentFXTxt">
-				</div>
-			 	<div class="form-control">
-					<label for="drywallCompoundTxt">Drywall Compound</label>
-					<input type="text" id="drywallCompoundTxt" name="drywallCompoundTxt">
-				</div>
-			 	<div class="form-control">
-					<label for="studsTxt">Studs</label>
-					<input type="text" id="studsTxt" name="studsTxt">
-				</div>
-			 	<div class="form-control">
-					<label for="safeNSoundTxt">Safe'n'Sound Insulation</label>
-					<input type="text" id="safeNSoundTxt" name="safeNSoundTxt">
-				</div>
-				<div class="form-control">
-					<label for="battInsulationTxt">Fibreglass Insulation</label>
-					<input type="text" id="battInsulationTxt" name="battInsulationTxt">
-				</div>
-				<div class="form-control">
-					<label for="SonopanTxt">Sonopan</label>
-					<input type="text" id="SonopanTxt" name="SonopanTxt">
-				</div>
-			</div>
 		</main>
 		<footer>
 		</footer>
