--- a/wallbuildercalculator.html
+++ b/wallbuildercalculator.html
@@ -23,46 +23,126 @@
 				<h2>Materials</h2>
 				<p>All materials are in dollars</p>
 				<div>
-					<div class="form-control">
-						<label for="rcTxt">Resilient Channel</label>
-						<input type="text" id="rcTxt" name="rcTxt">
-					</div>
-					<div class="form-control">
-						<label for="ggCompTxt">Green Glue"</label>
-						<input type="text" id="ggCompTxt" name="ggCompTxt">
-					</div>
-				 	<div class="form-control">
-						<label for="drywall12Txt">1/2" Drywall</label>
-						<input type="text" id="drywall12Txt" name="drywall12Txt">
-					</div>
-			 		<div class="form-control">
-						<label for="drywall58Txt">5/8" Drywall</label>
-						<input type="text" id="drywall58Txt" name="drywall58Txt">
-					</div>
-				 	<div class="form-control">
-						<label for="silentFXTxt">SilentFX Drywall</label>
-						<input type="text" id="silentFXTxt" name="silentFXTxt">
-					</div>
-				 	<div class="form-control">
-						<label for="drywallCompoundTxt">Drywall Compound</label>
-						<input type="text" id="drywallCompoundTxt" name="drywallCompoundTxt">
-					</div>
-				 	<div class="form-control">
-						<label for="studsTxt">Studs</label>
-						<input type="text" id="studsTxt" name="studsTxt">
-					</div>
-			 		<div class="form-control">
-						<label for="safeNSoundTxt">Safe'n'Sound Insulation</label>
-						<input type="text" id="safeNSoundTxt" name="safeNSoundTxt">
-					</div>
-					<div class="form-control">
-						<label for="battInsulationTxt">Fibreglass Insulation</label>
-						<input type="text" id="battInsulationTxt" name="battInsulationTxt">
-					</div>
-					<div class="form-control">
-						<label for="SonopanTxt">Sonopan</label>
-						<input type="text" id="SonopanTxt" name="SonopanTxt">
-					</div>
+					<fieldset>
+						<legend>Resilient Channel</legend>
+						<div class="form-control">
+							<label for="rcTxt">Per Unit</label>
+							<input type="text" id="rcTxt" name="rcTxt">
+						</div>
+						<div class="form-control">
+							<label for="rcTxtpsf">Per Square Foot</label>
+							<input type="text" id="rcTxtpsf" name="rcTxtpsf">
+						</div>
+					</fieldset>
+			
+					<fieldset>
+						<legend>Green Glue"</legend>
+						<div class="form-control">
+							<label for="ggCompTxt">Per Unit</label>
+							<input type="text" id="ggCompTxt" name="ggCompTxt">
+						</div>
+						<div class="form-control">
+							<label for="ggCompTxtpsf">Per Square Foot</label>
+							<input type="text" id="ggCompTxtpsf" name="ggCompTxtpsf">
+						</div>
+					</fieldset>
+			
+				 	<fieldset>
+						<legend>1/2" Drywall</legend>
+						<div class="form-control">
+							<label for="drywall12Txt">Per Unit</label>
+							<input type="text" id="drywall12Txt" name="drywall12Txt">
+						</div>
+						<div class="form-control">
+							<label for="drywall12Txtpsf">Per Square Foot</label>
+							<input type="text" id="drywall12Txtpsf" name="drywall12Txtpsf">
+						</div>
+					</fieldset>
+			
+			 		<fieldset>
+						<legend>5/8" Drywall</legend>
+						<div class="form-control">
+							<label for="drywall58Txt">Per Unit</label>
+							<input type="text" id="drywall58Txt" name="drywall58Txt">
+						</div>
+						<div class="form-control">
+							<label for="drywall58Txtpsf">Per Square Foot</label>
+							<input type="text" id="drywall58Txtpsf" name="drywall58Txtpsf">
+						</div>
+					</fieldset>
+			
+				 	<fieldset>
+						<legend>SilentFX Drywall</legend>
+						<div class="form-control">
+							<label for="silentFXTxt">Per Unit</label>
+							<input type="text" id="silentFXTxt" name="silentFXTxt">
+						</div>
+						<div class="form-control">
+							<label for="silentFXTxtpsf">Per Square Foot</label>
+							<input type="text" id="silentFXTxtpsf" name="silentFXTxtpsf">
+						</div>
+					</fieldset>
+			
+				 	<fieldset>
+						<legend>Drywall Compound</legend>
+						<div class="form-control">
+							<label for="drywallCompoundTxt">Per Unit</label>
+							<input type="text" id="drywallCompoundTxt" name="drywallCompoundTxt">
+						</div>
+						<div class="form-control">
+							<label for="drywallCompoundTxtpsf">Per Square Foot</label>
+							<input type="text" id="drywallCompoundTxtpsf" name="drywallCompoundTxtpsf">
+						</div>
+					</fieldset>
+			
+				 	<fieldset>
+						<legend>Studs</legend>
+						<div class="form-control">
+							<label for="studsTxt">Per Unit</label>
+							<input type="text" id="studsTxt" name="studsTxt">
+						</div>
+						<div class="form-control">
+							<label for="studsTxtpsf">Per Square Foot</label>
+							<input type="text" id="studsTxtpsf" name="studsTxtpsf">
+						</div>
+					</fieldset>
+			
+			 		<fieldset>
+						<legend>Safe'n'Sound Insulation</legend>
+						<div class="form-control">
+							<label for="safeNSoundTxt">Per Unit</label>
+							<input type="text" id="safeNSoundTxt" name="safeNSoundTxt">
+						</div>
+						<div class="form-control">
+							<label for="safeNSoundTxtpsf">Per Square Foot</label>
+							<input type="text" id="safeNSoundTxtpsf" name="safeNSoundTxtpsf">
+						</div>
+					</fieldset>
+			
+					<fieldset>
+						<legend>Fibreglass Insulation</legend>
+						<div class="form-control">
+							<label for="battInsulationTxt">Per Unit</label>
+							<input type="text" id="battInsulationTxt" name="battInsulationTxt">
+						</div>
+						<div class="form-control">
+							<label for="battInsulationTxtpsf">Per Square Foot</label>
+							<input type="text" id="battInsulationTxtpsf" name="battInsulationTxtpsf">
+						</div>
+					</fieldset>
+			
+					<fieldset>
+						<legend>Sonopan</legend>
+						<div class="form-control">
+							<label for="SonopanTxt">Per Unit</label>
+							<input type="text" id="SonopanTxt" name="SonopanTxt">
+						</div>
+						<div class="form-control">
+							<label for="SonopanTxtpsf">Per Square Foot</label>
+							<input type="text" id="SonopanTxtpsf" name="SonopanTxtpsf">
+						</div>
+					</fieldset>
+			
 				</div>
 			</section>
 		</main>
