--- a/wallbuildercalculator.html
+++ b/wallbuildercalculator.html
@@ -14,10 +14,54 @@
 		<main>
 			<section id="costBuilderSection">
 				<h2>Cost Building Section</h2>
-				<div>
-					<label for="sizeTxt">Enter size of area of wall to sound proof in square feet:</label>
-					<input type="text" id="sizeTxt" name="sizeTxt">
+				<div class="form-control">
+					<label for="sizeNum">Enter size of area of wall to sound proof in square feet:</label>
+					<input type="number" id="sizeNum" name="sizeNum">
 				</div>
+				<fieldset>
+					<legend>Materials</legend>
+					<div class="form-control">
+						<input type="checkbox" id="rcChk" name="rcChk">
+						<label for="rcChk">Resilient Channel</label>
+					</div>
+					<div class="form-control">
+						<input type="checkbox" id="ggChk" name="rcChk">
+						<label for="ggChk">Green Glue</label>
+					</div>
+					<div class="form-control">
+						<input type="checkbox" id="drywall12Chk" name="drywall12Chk">
+						<label for="drywall12Chk">1/2" Drywall</label>
+					</div>
+					<div class="form-control">
+						<input type="checkbox" id="drywall58Chk" name="drywall58Chk">
+						<label for="drywall58Chk">5/8" Drywall</label>
+					</div>
+					<div class="form-control">
+						<input type="checkbox" id="silentFX" name="silentFX">
+						<label for="silentFX">SilentFX</label>
+					</div>
+					<div class="form-control">
+						<input type="checkbox" id="drywallCmp" name="drywallCmp">
+						<label for="drywallCmp">Drywall Compound</label>
+					</div>
+					<div class="form-control">
+						<input type="checkbox" id="studsCmp" name="studsCmp">
+						<label for="studsCmp">2x4 Studs</label>
+					</div>
+					<div class="form-control">
+						<input type="checkbox" id="safeNSound" name="safeNSound">
+						<label for="safeNSound">Safe'n'sound</label>
+					</div>
+					<div class="form-control">
+						<input type="checkbox" id="battInsulation" name="battInsulation">
+						<label for="battInsulation">Resilient Channel</label>
+					</div>
+					<div class="form-control">
+						<input type="checkbox" id="Sonopan" name="Sonopan">
+						<label for="Sonopan">Sonopan</label>
+					</div>
+				</fieldset>
+				<p id="results"></p>
 			</section>
 			<section id="materialsSection">
 				<h2>Materials</h2>
@@ -36,7 +80,7 @@
 					</fieldset>
 			
 					<fieldset>
-						<legend>Green Glue"</legend>
+						<legend>Green Glue</legend>
 						<div class="form-control">
 							<label for="ggCompTxt">Per Unit</label>
 							<input type="text" id="ggCompTxt" name="ggCompTxt">
