Added blurb to the beginning

--- a/wallbuildercalculator.html
+++ b/wallbuildercalculator.html
@@ -10,6 +10,12 @@
 	<body>
 		<header>
 			<h1>Wall Builder Calculator</h1>
+			<p>This is a calculator primarely to be used for people who live with a shared wall, like in a condo and they want to soundproof a wall.  the assumption is that a wall already exists with one layer of half-inch drywall on each side of wooden studs, and you only have access to one side.  You can take out existing drywall, and put up a new wall, but you don't have access to the other side.</p>
+			<p>This does not take into account any costs associated with hiring a contractor to do the work, or the cost of beer and pizza if you draft some friends to help out. It does not include equipment or tool rentals or purchases.  This is just materials of building the wall itself.</p>
+			<p>It does not take into account the costs of you screwing everything up and having to do it again, or hire someone else to fix it.  It does not cover the costs of marriage counselling or divorce attourney's if your significant other gets fed up with you ineptitude and all the time you spend on your precious sound studio.</p>
+			<p>It does not take into account the cost of the new home theatre system, or any <a href="https://www.amazon.ca/AAR-Scottish-Bagpipe-Rosewood-Carrying/dp/B07DPMW4QG?ref_=Oct_s9_apbd_omg_hd_bw_b9AGTtT&pf_rd_r=5R5PB0EGJVSSFQ8AP8Z1&pf_rd_p=39f91e52-c7ea-5b65-858e-3f49079c010c&pf_rd_s=merchandised-search-10&pf_rd_t=BROWSE&pf_rd_i=8396887011" target="_blank">musical instruments</a> you will now feel free to purchase knowing
+			<p>It does not take into account any increase in property value, or rental income you can start bringning in because you're house or condo is much better, or the savings in medical expenses for having lower blood pressure or other stress related illness brought on by constant noise pollution of not doing this.</p>
+			<p><strong>Note:</strong> And lastly, it is only an <em>estimate</em>.  The costs per square foot can be easy to calculate (8'x4' drywall is 32 square feet.  So cost per square foot is cost of one sheet of drywall divided by 32.), or hard to calculate (a wooden wall frame can't be so easily broken down into a per square foot cost, <abbr title="As far as I know">AFAIK</abbr>.)
 		</header>
 		<main>
 			<section id="costBuilderSection">
