WIP: Adding Per Sheet of Drywall

--- a/wallbuildercalculator.html
+++ b/wallbuildercalculator.html
@@ -83,6 +83,10 @@
 							<input type="text" id="studsTxt" name="studsTxt">
 						</div>
 						<div class="form-control">
+							<label for="studsTxtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="studsTxtpsd" id="studsTxtpsd">
+						</div>
+						<div class="form-control">
 							<label for="studsTxtpsf">Per Square Foot</label>
 							<input type="text" id="studsTxtpsf" name="studsTxtpsf">
 						</div>
@@ -93,6 +97,10 @@
 						<div class="form-control">
 							<label for="safeNSoundTxt">Per Unit</label>
 							<input type="text" id="safeNSoundTxt" name="safeNSoundTxt">
+						</div>
+						<div class="form-control">
+							<label for="safeNSoundTxtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="safeNSoundTxtpsd" id="safeNSoundTxtpsd">
 						</div>
 						<div class="form-control">
 							<label for="safeNSoundTxtpsf">Per Square Foot</label>
@@ -107,6 +115,10 @@
 							<input type="text" id="battInsulationTxt" name="battInsulationTxt">
 						</div>
 						<div class="form-control">
+							<label for="battInsulationTxtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="battInsulationTxtpsd" id="battInsulationTxtpsd">
+						</div>
+						<div class="form-control">
 							<label for="battInsulationTxtpsf">Per Square Foot</label>
 							<input type="text" id="battInsulationTxtpsf" name="battInsulationTxtpsf">
 						</div>
@@ -117,6 +129,10 @@
 						<div class="form-control">
 							<label for="rcTxt">Per Unit</label>
 							<input type="text" id="rcTxt" name="rcTxt">
+						</div>
+						<div class="form-control">
+							<label for="rcTxtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="rcTxtpsd" id="rcTxtpsd">
 						</div>
 						<div class="form-control">
 							<label for="rcTxtpsf">Per Square Foot</label>
@@ -131,6 +147,10 @@
 							<input type="text" id="SonopanTxt" name="SonopanTxt">
 						</div>
 						<div class="form-control">
+							<label for="SonopanTxtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="SonopanTxtpsd" id="SonopanTxtpsd">
+						</div>
+						<div class="form-control">
 							<label for="SonopanTxtpsf">Per Square Foot</label>
 							<input type="text" id="SonopanTxtpsf" name="SonopanTxtpsf">
 						</div>
@@ -141,6 +161,10 @@
 						<div class="form-control">
 							<label for="drywall12Txt">Per Unit</label>
 							<input type="text" id="drywall12Txt" name="drywall12Txt">
+						</div>
+						<div class="form-control">
+							<label for="drywall12Txtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="drywall12Txtpsd" id="drywall12Txtpsd">
 						</div>
 						<div class="form-control">
 							<label for="drywall12Txtpsf">Per Square Foot</label>
@@ -155,6 +179,10 @@
 							<input type="text" id="drywall58Txt" name="drywall58Txt">
 						</div>
 						<div class="form-control">
+							<label for="drywall58Txtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="drywall58Txtpsd" id="drywall58Txtpsd">
+						</div>
+						<div class="form-control">
 							<label for="drywall58Txtpsf">Per Square Foot</label>
 							<input type="text" id="drywall58Txtpsf" name="drywall58Txtpsf">
 						</div>
@@ -165,6 +193,10 @@
 						<div class="form-control">
 							<label for="silentFXTxt">Per Unit</label>
 							<input type="text" id="silentFXTxt" name="silentFXTxt">
+						</div>
+						<div class="form-control">
+							<label for="silentFXTxtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="silentFXTxtpsd" id="silentFXTxtpsd">
 						</div>
 						<div class="form-control">
 							<label for="silentFXTxtpsf">Per Square Foot</label>
@@ -179,6 +211,10 @@
 							<input type="text" id="ggCompTxt" name="ggCompTxt">
 						</div>
 						<div class="form-control">
+							<label for="ggCompTxtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="ggCompTxtpsd" id="ggCompTxtpsd">
+						</div>
+						<div class="form-control">
 							<label for="ggCompTxtpsf">Per Square Foot</label>
 							<input type="text" id="ggCompTxtpsf" name="ggCompTxtpsf">
 						</div>
@@ -190,6 +226,10 @@
 						<div class="form-control">
 							<label for="drywallCompoundTxt">Per Unit</label>
 							<input type="text" id="drywallCompoundTxt" name="drywallCompoundTxt">
+						</div>
+						<div class="form-control">
+							<label for="drywallCompoundTxtpsd">Per Sheet of Drywall</label>
+							<input type="text" name="drywallCompoundTxtpsd" id="drywallCompoundTxtpsd">
 						</div>
 						<div class="form-control">
 							<label for="drywallCompoundTxtpsf">Per Square Foot</label>
